--- a/package.json
+++ b/package.json
@@ -11,17 +11,24 @@
     "test": "cross-env NODE_ENV=test jest"
   },
   "dependencies": {
+    "@types/cors": "^2.8.6",
     "@types/csv-parse": "^1.2.2",
+    "cors": "^2.8.5",
     "csv-parse": "^4.8.8",
+    "csv-parser": "^2.3.2",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-async-errors": "^3.1.1",
     "multer": "^1.4.2",
-    "pg": "^8.0.0",
+    "pg": "^8.0.2",
     "reflect-metadata": "^0.1.13",
-    "typeorm": "^0.2.24"
+    "tsconfig": "^7.0.0",
+    "typeorm": "^0.2.24",
+    "uuid": "^7.0.3"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.6",
+    "@types/csv-parse": "^1.2.2",
     "@types/express": "4.17.3",
     "@types/express-serve-static-core": "4.17.2",
     "@types/jest": "^25.2.1",
